# Genjin

./: CMakeLists.txt  main.cpp
systems/: ConfigurationManager.cpp  ConfigurationManager.h  MemoryManager.h  System.h  logging.h
systems/configurationmanager/: ConfigurationManager.cpp  ConfigurationManager.h
systems/configurationmanager/enumerations/: BoolConfigKey.h
systems/configurationmanager/exception/: BadConfigKeyException.h
systems/iomanager/: BinarySemaphore.cpp  BinarySemaphore.h
systems/memorymanager/: DoubleStackAllocator.cpp  DoubleStackAllocator.h  MemoryManager.cpp  MemoryManager.h  PoolAllocator.cpp  PoolAllocator.h  PoolAllocatorBlock.cpp  PoolAllocatorBlock.h  StackAllocator.cpp  StackAllocator.h
systems/memorymanager/exception/: BadStackPointerException.h  BlockTooSmallException.h  OutOfMemoryException.h
